update validate register.controller & update swagger-ui
